Update and Edit new about page

--- a/Huimitu/src/resources/views/about.hbs
+++ b/Huimitu/src/resources/views/about.hbs
@@ -2,18 +2,18 @@
     <div class="container margin_60_35 add_bottom_30">
         <div class="main_title">
             <h2>About Huimitu</h2>
-            <p>Euismod phasellus ac lectus fusce parturient cubilia a nisi blandit sem cras nec tempor adipiscing rcu
-                ullamcorper ligula.</p>
+            <p>Huimitu (HMT) is a successfull chain of accessory stores in the field of phone accessories 
+                business in Ho Chi Minh City.</p>
         </div>
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-5">
                 <div class="box_about">
                     <h2>Top Products</h2>
-                    <p class="lead">Est falli invenire interpretaris id, magna libris sensibus mel id.</p>
-                    <p>Per eu nostrud feugiat. Et quo molestiae persecuti neglegentur. At zril definitionem mei, vel ei
-                        choro volumus. An tota nulla soluta has, ei nec essent audiam, te nisl dignissim vel. Ex velit
-                        audire perfecto pro, ei mei doming vivendo legendos. Cu sit magna zril, an odio delectus
-                        constituto vis. Vis ludus omnesque ne, est veri quaeque ad.</p>
+                    <p class="lead">Những sản phẩm tốt nhất trên VN</p>
+                    <p>Đến với Huimitu, bạn sẽ được trải nghiệm những sản phẩm vượt tầm thế giới, không 
+                        ở đâu sánh bằng. Không những thế những sản phẩm này sẽ đưa bạn tới đỉnh cao của sự
+                        mượt mà bóng bẩy và xịn xò có 1 không 2 !
+                    </p>
                     <img src="img/arrow_about.png" alt="" class="arrow_1">
                 </div>
             </div>
@@ -29,11 +29,10 @@
             <div class="col-lg-5">
                 <div class="box_about">
                     <h2>Top Brands</h2>
-                    <p class="lead">Est falli invenire interpretaris id, magna libris sensibus mel id.</p>
-                    <p>Per eu nostrud feugiat. Et quo molestiae persecuti neglegentur. At zril definitionem mei, vel ei
-                        choro volumus. An tota nulla soluta has, ei nec essent audiam, te nisl dignissim vel. Ex velit
-                        audire perfecto pro, ei mei doming vivendo legendos. Cu sit magna zril, an odio delectus
-                        constituto vis. Vis ludus omnesque ne, est veri quaeque ad.</p>
+                    <p class="lead">Những thương hiệu hàng đầu VN</p>
+                    <p>Nói thật hông phải xạo chứ ở Huimitu không chỉ có những thương hiệu lớn mà còn
+                        có những  thương  hiệu nhỏ nhưng nhỏ ở đây là nhỏ gì ấy chứ chất lượng cực kì ngon nha.
+                        Sự uy tín từ các thương hiệu đúc kết để có được ngày hôm nay !   </p>
                     <img src="img/arrow_about.png" alt="" class="arrow_2">
                 </div>
             </div>
@@ -43,11 +42,11 @@
             <div class="col-lg-5">
                 <div class="box_about">
                     <h2>+5000 products</h2>
-                    <p class="lead">Est falli invenire interpretaris id, magna libris sensibus mel id.</p>
-                    <p>Per eu nostrud feugiat. Et quo molestiae persecuti neglegentur. At zril definitionem mei, vel ei
-                        choro volumus. An tota nulla soluta has, ei nec essent audiam, te nisl dignissim vel. Ex velit
-                        audire perfecto pro, ei mei doming vivendo legendos. Cu sit magna zril, an odio delectus
-                        constituto vis. Vis ludus omnesque ne, est veri quaeque ad.</p>
+                    <p class="lead">Số lượng sản phẩm nhiều vô kể</p>
+                    <p>Sản phẩm tại Huimitu ngày càng nhiều ơi là nhiều, nhưng nhiều mà đi đôi với 
+                        chất lượng chứ không kém chất lượng à nha. Khách hàng tại đây tha hồ lựa chọn mua sắm thỏa
+                        thích , mua hàng chỉ với 1 click.  Còn chần chừ gì nữa mà không nhào zô mua ngay nào !
+                    </p>
                 </div>
 
             </div>
@@ -62,56 +61,50 @@
     <div class="bg_white">
         <div class="container margin_60_35">
             <div class="main_title">
-                <h2>Why Choose Allaia</h2>
-                <p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
+                <h2>Why Choose Huimitu</h2>
+                <p>Vì, chúng tôi luôn đặt khách hàng là ưu tiên hàng đầu</p>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="box_feat">
                         <i class="ti-medall-alt"></i>
                         <h3>+ 1000 Customers</h3>
-                        <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus interpretaris, cum no
-                            alii option, cu sit mazim libris.</p>
+                        <p>Là con số khách hàng mua hàng tại Huimitu mỗi ngày</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="box_feat">
                         <i class="ti-help-alt"></i>
-                        <h3>H24 Support</h3>
-                        <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus interpretaris, cum no
-                            alii option, cu sit mazim libris. </p>
+                        <h3>24h Support</h3>
+                        <p>Chúng tôi có đội ngũ hỗ trợ 24/24 bất chấp mọi hoàn cảnh</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="box_feat">
                         <i class="ti-gift"></i>
                         <h3>Great Sale Offers</h3>
-                        <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus interpretaris, cum no
-                            alii option, cu sit mazim libris.</p>
+                        <p>Huimitu có rất nhiều những đợt giảm giá lớn vào mỗi đầu tháng</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="box_feat">
                         <i class="ti-headphone-alt"></i>
                         <h3>Help Direct Line</h3>
-                        <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus interpretaris, cum no
-                            alii option, cu sit mazim libris. </p>
+                        <p>Tổng đài hỗ trợ trực tiếp</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="box_feat">
                         <i class="ti-wallet"></i>
                         <h3>Secure Payments</h3>
-                        <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus interpretaris, cum no
-                            alii option, cu sit mazim libris.</p>
+                        <p>Bảo mật tối đa khi thanh toán, bảo mật thông tin thanh toán</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="box_feat">
                         <i class="ti-comments"></i>
                         <h3>Support via Chat</h3>
-                        <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus interpretaris, cum no
-                            alii option, cu sit mazim libris. </p>
+                        <p>Bạn có thể chat trực tiếp với chúng tôi thông qua kênh chat tại Huimitu</p>
                     </div>
                 </div>
             </div>
@@ -122,42 +115,42 @@
 
     <div class="container margin_60">
         <div class="main_title">
-            <h2>Meet Allaia Staff</h2>
-            <p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
+            <h2>Đội ngũ điều hành Huimitu</h2>
+            <p>Trải qua bao gian nan để gây dựng nên Huimitu cho tới nay</p>
         </div>
         <div class="owl-carousel owl-theme carousel_centered">
             <div class="item">
                 <a href="#0">
                     <div class="title">
-                        <h4>Julia Holmes<em>CEO</em></h4>
+                        <h4>Thanh Khiêm<em>BE</em></h4>
                     </div><img src="img/staff/1_carousel.jpg" alt="">
                 </a>
             </div>
             <div class="item">
                 <a href="#0">
                     <div class="title">
-                        <h4>Lucas Smith<em>Marketing</em></h4>
+                        <h4>Thành Hiệu<em>UI/UX and QC</em></h4>
                     </div><img src="img/staff/2_carousel.jpg" alt="">
                 </a>
             </div>
             <div class="item">
                 <a href="#0">
                     <div class="title">
-                        <h4>Paul Stephens<em>Business strategist</em></h4>
+                        <h4>Thiên Quân<em>FE</em></h4>
                     </div><img src="img/staff/3_carousel.jpg" alt="">
                 </a>
             </div>
             <div class="item">
                 <a href="#0">
                     <div class="title">
-                        <h4>Pablo Himenez<em>Customer Service</em></h4>
+                        <h4>Thu Thảo<em>BA</em></h4>
                     </div><img src="img/staff/4_carousel.jpg" alt="">
                 </a>
             </div>
             <div class="item">
                 <a href="#0">
                     <div class="title">
-                        <h4>Andrew Stuttgart<em>Admissions</em></h4>
+                        <h4>Thanh Hiếu<em>Admin</em></h4>
                     </div><img src="img/staff/5_carousel.jpg" alt="">
                 </a>
             </div>
