--- a/Huimitu/src/resources/views/contact.hbs
+++ b/Huimitu/src/resources/views/contact.hbs
@@ -3,31 +3,30 @@
     <div class="container margin_60">
         <div class="main_title">
             <h2>Contact Huimitu</h2>
-            <p>Euismod phasellus ac lectus fusce parturient cubilia a nisi blandit sem cras nec tempor adipiscing rcu
-                ullamcorper ligula.</p>
+            <p>Hãy liên hệ với chúng tôi qua</p>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-4">
                 <div class="box_contacts">
                     <i class="ti-support"></i>
-                    <h2>Allaia Help Center</h2>
-                    <a href="#0">+94 423-23-221</a> - <a href="#0">help@allaia.com</a>
+                    <h2>Huimitu Help Center</h2>
+                    <a href="#0">+84 1900 112233</a> - <a href="#0">help@huimitu.com</a>
                     <small>MON to FRI 9am-6pm SAT 9am-2pm</small>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="box_contacts">
                     <i class="ti-map-alt"></i>
-                    <h2>Allaia Showroom</h2>
-                    <div>6th Forrest Ray, London - 10001 UK</div>
+                    <h2>Huimitu Showroom</h2>
+                    <div>227 Nguyễn Văn Cừ, Quận 5, TpHCM</div>
                     <small>MON to FRI 9am-6pm SAT 9am-2pm</small>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="box_contacts">
                     <i class="ti-package"></i>
-                    <h2>Allaia Orders</h2>
-                    <a href="#0">+94 423-23-221</a> - <a href="#0">order@allaia.com</a>
+                    <h2>Huimitu Orders</h2>
+                    <a href="#0">+84 1111 0000</a> - <a href="#0">order@huimitu.com</a>
                     <small>MON to FRI 9am-6pm SAT 9am-2pm</small>
                 </div>
             </div>
@@ -36,8 +35,8 @@
     </div>
     <!-- /container -->
     <div class="bg_white">
-        <div class="container margin_60_35">
-            <h4 class="pb-3">Drop Us a Line</h4>
+        <div class="container margin_60_35" style="margin-left:585px;">
+            <h4 class="pb-3">Để lại lời nhắn cho chúng tôi</h4>
             <div class="row">
                 <div class="col-lg-4 col-md-6 add_bottom_25">
                     <div class="form-group">
@@ -53,11 +52,7 @@
                         <input class="btn_1 full-width" type="submit" value="Submit">
                     </div>
                 </div>
-                <div class="col-lg-8 col-md-6 add_bottom_25">
-                    <iframe class="map_contact"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39714.47749917409!2d-0.13662037019554393!3d51.52871971170425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondra%2C+Regno+Unito!5e0!3m2!1sit!2ses!4v1557824540343!5m2!1sit!2ses"
-                        style="border: 0" allowfullscreen></iframe>
-                </div>
+                
             </div>
             <!-- /row -->
         </div>
