--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -75,7 +75,7 @@
 								<li class="submenu">
 									<a href="javascript:void(0);" class="show-submenu" style ="text-decoration: none;">Support</a>
 									<ul>									
-										<li><a href="/">Contact Us</a></li>
+										<li><a href="/contact">Contact Us</a></li>
 										<li><a href="/about">About us</a></li>
 									</ul>
 								</li>				
