Edit footer of ADMINSITE and Update more filter in product page

--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -77,6 +77,18 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
+                                <li>
+                                    <label class="container_check" style="padding-left:30px;">Ốp lưng<small></small>
+                                        <input type="checkbox" name="filtering_category" value="Ốp lưng">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                </li>
+                                <li>
+                                    <label class="container_check" style="padding-left:30px;">Dán màn hình <small></small>
+                                        <input type="checkbox" name="filtering_category" value="Dán màn hình">
+                                        <span class="checkmark"></span>
+                                    </label>
+                                </li>
                             </ul>
                         </div>
                         <!-- /filter_type -->
